--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 }
 
 .borderVertikal {
-    border-right:  3px solid black;
+    border-right:  3px solid #ffffff;
     width: 1px;
     height: 80px;
     margin-left: 30px;
