--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,34 @@
-.wrapper {
+* {
+    padding: 0;
+    margin: 0;
+}
+.intro_content_wrapper {
     width: 1400px;
-    margin: auto
- }
-
-
-
-.video {
+    margin: 40px auto;
+    z-index: 1000;
+    color: white;
     position: relative;
-    padding-bottom: 56.25%;
+}
+.intro-media {
+    position: absolute;
+     width: 100%;
+     height: 100%;
+     top:0;
+     overflow: hidden;
+     left: 0;
+}
+.video_media {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translate(-50%, -50%);
+
 }
 
-.video_media {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top:0;
-    left: 0;
+.intro {
+    height: 100vh;
+    overflow: hidden;
 }
+
