--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,15 @@
 * {
     padding: 0;
     margin: 0;
+
 }
 .intro_content_wrapper {
     width: 1400px;
     margin: 40px auto;
-    z-index: 1000;
+    z-index: 10;
     color: white;
     position: relative;
+
 }
 .intro-media {
     position: absolute;
@@ -25,10 +27,23 @@
     min-height: 100%;
     transform: translate(-50%, -50%);
 
-}
 
+}
 .intro {
     height: 100vh;
+    position: relative;
     overflow: hidden;
+}
+
+.intro:after {
+    content: "";
+    display: block;
+    background-color: rgba(0,0,0, .8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 150%
 }
 
