--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 }
 
 .borderVertikal {
-    border-right:  3px solid #ffffff;
+    border-right:  3px solid  #38ff00;;
     width: 1px;
     height: 80px;
     margin-left: 30px;
@@ -21,5 +21,6 @@
 
 .logoTitle {
     font-size: 35px;
+    color: #38ff00;
 }
 
