--- a/src/styles.css
+++ b/src/styles.css
@@ -45,13 +45,11 @@
     left: 0;
     z-index: 2;
     width: 100%;
-    height: 150%
-}
+ }
 
 .logoPhone_wrapper {
     width: 100%;
-    height: 100vh;
-    position: relative;
+     position: relative;
     z-index: 5;
     overflow: hidden;
 }
@@ -70,5 +68,46 @@
 }
 .logoPhone {
     width: 70px;
+    transition: .5s;
+}
+
+.header_title_text {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header_title_wrapper {
+    z-index: 10;
+    color: #38ff00;
+   }
+
+.header_title {
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.header_text {
+    margin-top: 20px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.header_btn {
+    font-size: 24px;
+    border: 2px solid #38ff00 ;
+    padding: 15px;
+    width: 200px;
+    margin: 30px auto;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 15px;
+}
+
+.header_btn:hover {
+    background-color: #38ff00;
+    color: white;
     transition: .5s;
 }
