--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -5,10 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal {
@@ -16,15 +13,20 @@
     position: absolute;
     top:50%;
     left: 50%;
-    transform: translate(-50%, 50%);
-    padding: 20px;
-    border-radius: 5px;
+    transform: translate(-50%, -50%);
+    padding: 100px;
+    box-sizing: border-box;
+    border-radius: 50px;
     z-index: 20;
-    width: 500px;
-}
+
+ }
+
 
 .closeICon {
+    cursor: pointer;
     position: absolute;
-    right: -22px;
-    top: -22px;
+    right: 30px;
+    color: white;
+    top: 30px;
+    width: 50px;
 }
