--- a/src/components/ModalWindow/ModalContent/ModalContent.module.css
+++ b/src/components/ModalWindow/ModalContent/ModalContent.module.css
@@ -33,8 +33,8 @@
     width: 500px;
     margin-top: 10px;
     text-align: center;
-    border: 1px solid #38ff00;
-    color: #38ff00;
+    border: 1px solid#b308ec;
+    color: #b308ec;
     cursor: pointer;
     padding: 20px 0;
     border-radius: 20px;
@@ -43,7 +43,7 @@
 }
 
 .dataBtn:hover {
-    background-color: #38ff00;
+    background-color: #b308ec;
     color: white;
     transition: .5s;
     font-size: 20px;
