--- a/src/styles.css
+++ b/src/styles.css
@@ -1,130 +1,135 @@
 * {
-    padding: 0;
-    margin: 0;
-
+	padding: 0;
+	margin: 0;
+}
+body {
+	background-color: black;
 }
 .intro_content {
-    width: 1440px;
-    margin: 20px auto;
-    z-index: 10;
-    color: white;
-    position: relative;
+	width: 1440px;
+	margin: 20px auto;
+	z-index: 10;
+	color: white;
+	position: relative;
 }
 
 .intro_content_wrapper {
-    position: relative;
+	position: relative;
 }
 .intro-media {
-    position: absolute;
-     width: 100%;
-     height: 100%;
-     top:0;
-     overflow: hidden;
-     left: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	overflow: hidden;
+	left: 0;
 }
 .video_media {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    transform: translate(-50%, -50%);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	transform: translate(-50%, -50%);
 }
 .intro {
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
 }
 
 .intro:after {
-    content: "";
-    display: block;
-    background-color: rgba(0,0,0, .8);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 100%;
- }
+	content: '';
+	display: block;
+	background-color: rgba(0, 0, 0, 0.8);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	width: 100%;
+}
 
 .logoPhone_wrapper {
-    width: 100%;
-     position: relative;
-    z-index: 5;
-    overflow: hidden;
+	width: 100%;
+	position: relative;
+	z-index: 5;
+	overflow: hidden;
 }
 
 .logoPhoneDiamond {
-    cursor: pointer;
-    right: 40px;
-    position: fixed;
-    bottom: 40px;
+	cursor: pointer;
+	right: 40px;
+	position: fixed;
+	bottom: 40px;
 }
 
 .logoPhone:hover {
-    width: 100px;
-    transition: .5s;
-    overflow: hidden;
+	width: 100px;
+	transition: 0.5s;
+	overflow: hidden;
 }
 .logoPhone {
-    width: 70px;
-    transition: .5s;
+	width: 70px;
+	transition: 0.5s;
 }
 
 .header_title_text {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 25%;
-    transform: translate(-25%, -25%);
-    color: #b308ec;
-
+	position: absolute;
+	text-align: center;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #b308ec;
 }
 
-
-
-
 .header_title {
-    font-size: 60px;
-    font-weight: 700;
+	font-size: 60px;
+	font-weight: 700;
 }
 
 .header_text {
-    margin-top: 20px;
-    font-size: 30px;
-    font-weight: 700;
+	margin-top: 20px;
+	font-size: 30px;
+	font-weight: 700;
 }
 
 .header_btn {
-    font-size: 24px;
-    border: 2px solid #b308ec ;
-    padding: 15px;
-    width: 200px;
-    margin: 30px auto;
-    cursor: pointer;
-    transition: .5s;
-    border-radius: 15px;
+	font-size: 24px;
+	border: 2px solid #b308ec;
+	padding: 15px;
+	width: 200px;
+	margin: 30px auto;
+	cursor: pointer;
+	transition: 0.5s;
+	border-radius: 15px;
 }
 
 .header_btn:hover {
-    background-color: #b308ec;
-    color: white;
-    transition: .5s;
+	background-color: #b308ec;
+	color: white;
+	transition: 0.5s;
 }
 
 @media screen and (max-width: 1500px) {
-    /*.intro_content {*/
-    /*    width: 1400px;*/
-    /*}*/
-    .header_title {
-        font-size: 40px;
-    }
-    .header_btn {
-        font-size: 18px;
-        width: 150px;
-        margin: 15px auto;
-    }
-    .header_text {
-        font-size: 22px;
-    }
+	/*.intro_content {*/
+	/*    width: 1400px;*/
+	/*}*/
+	.header_title {
+		font-size: 40px;
+	}
+	.header_btn {
+		font-size: 18px;
+		width: 150px;
+		margin: 15px auto;
+	}
+	.header_text {
+		font-size: 22px;
+	}
+}
+
+/* Стили для Content */
+
+.main {
+	width: 1440px;
+	margin: auto;
 }
