--- a/src/components/MainContent/Protection/Protection.module.css
+++ b/src/components/MainContent/Protection/Protection.module.css
@@ -17,3 +17,32 @@
 	width: 100%;
 	margin-left: 10px;
 }
+
+.Cards {
+	display: flex;
+	justify-content: space-between;
+}
+
+.cardTitle {
+	font-size: 20px;
+	color: #dbcbc3;
+}
+.wrapperImage {
+	width: 400px;
+	overflow: hidden;
+	display: inline-block;
+	border-radius: 30px;
+
+	position: relative;
+}
+.cardImage {
+	width: 400px;
+	height: 100%;
+	transition: transform 0.5s ease;
+	border-radius: 30px;
+	cursor: pointer;
+}
+
+.cardImage:hover {
+	transform: scale(1.2);
+}
