--- a/src/components/MainContent/Recovery/Recovery.module.css
+++ b/src/components/MainContent/Recovery/Recovery.module.css
@@ -1,18 +1,18 @@
-.protectionTitle {
+.recoveryTitle {
 	color: #dbcbc3;
 	margin-top: 40px;
 	font-size: 28px;
 }
-.protectionBorder {
+.recoveryBorder {
 	display: flex;
 	margin-top: 10px;
 	margin-bottom: 30px;
 }
-.protectionBorderViolet {
+.recoveryBorderViolet {
 	border-bottom: 1px solid #b308ec;
 	width: 50px;
 }
-.protectionBorderGrey {
+.recoveryBorderGrey {
 	border-bottom: 1px solid #8d8d8d;
 	width: 100%;
 	margin-left: 10px;
@@ -25,13 +25,12 @@
 
 .cardTitle {
 	font-size: 20px;
-	margin-top: 13px;
 	color: #dbcbc3;
+	margin-top: 13px;
 }
 .wrapperImage {
 	width: 400px;
 	height: 283px;
-
 	overflow: hidden;
 	border-radius: 30px;
 }
