--- a/src/components/MainContent/AboutUs/AboutUs.module.css
+++ b/src/components/MainContent/AboutUs/AboutUs.module.css
@@ -18,13 +18,13 @@
 }
 
 .aboutYears {
-	color: #dbcbc3;
+	color: #facd00;
 	font-size: 70px;
 	font-weight: 700;
 }
 
 .aboutText {
-	color: #dbcbc3;
+	color: #facd00;
 	font-size: 20px;
 	font-weight: 400;
 }
