--- a/src/components/MainContent/Styling/Styling.module.css
+++ b/src/components/MainContent/Styling/Styling.module.css
@@ -9,7 +9,7 @@
 	margin-bottom: 30px;
 }
 .stylingBorderViolet {
-	border-bottom: 1px solid #b308ec;
+	border-bottom: 1px solid #facd00;
 	width: 50px;
 }
 .stylingBorderGrey {
