--- a/src/components/Services/Services.module.css
+++ b/src/components/Services/Services.module.css
@@ -1,18 +1,17 @@
 .wrapper_services {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 20px 0;
-
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 20px 0;
 }
 
 .services {
-    text-align: center;
-    cursor: pointer;
-    transition: .5s;
-    font-weight: 700
+	text-align: center;
+	cursor: pointer;
+	transition: 0.5s;
+	font-weight: 700;
 }
 
 .services:hover {
-    color: #b308ec;
+	color: #facd00;
 }
