--- a/src/components/MainContent/Recovery/Recovery.module.css
+++ b/src/components/MainContent/Recovery/Recovery.module.css
@@ -9,7 +9,7 @@
 	margin-bottom: 30px;
 }
 .recoveryBorderViolet {
-	border-bottom: 1px solid #facd00;
+	border-bottom: 1px solid #b308ec;
 	width: 50px;
 }
 .recoveryBorderGrey {
