--- a/src/CarPages/MiniCooper/MiniCooper.module.css
+++ b/src/CarPages/MiniCooper/MiniCooper.module.css
@@ -5,6 +5,7 @@
 	height: 100vh; /* Поддерживает пропорции изображения */
 	object-fit: cover;
 	background-position: center;
+	position: relative;
 }
 
 .shadowLayer {
@@ -23,4 +24,68 @@
 	margin: auto;
 	position: relative;
 	z-index: 1; /* Гарантирует, что контент будет виден поверх тени */
+}
+.contentCooper {
+	position: absolute;
+}
+.titleCooper {
+	font-size: 24px;
+	color: #dbcbc3;
+	font-weight: 700;
+}
+.recoveryBorder {
+	display: flex;
+	margin-top: 10px;
+	margin-bottom: 30px;
+	opacity: 0.6;
+}
+
+.recoveryBorderViolet {
+	border-bottom: 1px solid #facd00;
+	width: 50px;
+}
+.recoveryBorderGrey {
+	border-bottom: 1px solid #8d8d8d;
+	width: 100%;
+	margin-left: 10px;
+}
+
+.colorCooper {
+	font-size: 78px;
+	font-weight: 700;
+	width: 900px;
+	color: #dbcbc3;
+	position: relative;
+	display: flex;
+}
+
+.btnCooper {
+	background-color: transparent;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	text-align: center;
+	border: none;
+	width: 200px;
+	border-radius: 60px;
+	padding: 20px;
+	font-size: 20px;
+	color: white;
+	cursor: pointer;
+	border: 1px solid #facd00;
+	transition: 0.5s;
+}
+
+.btnCooper:hover {
+	background-color: #facd00;
+	transition: 0.5s;
+}
+
+.beforeAfterImage {
+	width: 1440px;
+	margin: 40px auto;
+}
+
+.imageBeforeAfter {
+	height: 1100px;
 }
