--- a/src/CarPages/MiniCooper/MiniCooper.module.css
+++ b/src/CarPages/MiniCooper/MiniCooper.module.css
@@ -1,6 +1,3 @@
-@import '~slick-carousel/slick/slick.css';
-@import '~slick-carousel/slick/slick-theme.css';
-
 .carImage {
 	position: relative;
 	background: url('https://static.tildacdn.com/tild6231-3365-4135-a131-383136653765/2.jpg');
@@ -133,4 +130,21 @@
 .text {
 	color: #d9c9c1;
 	font-size: 20px;
+}
+
+.carousel {
+	margin-bottom: 20px;
+}
+
+.wrapperCarousel {
+	width: 900px;
+	margin: auto;
+	border-radius: 40px;
+}
+.imageCarousel {
+	background-image: url('https://optim.tildacdn.com/tild3965-3835-4466-b830-363366393337/-/format/webp/Rectangle_1743.png');
+	background-size: cover;
+	object-fit: cover;
+	background-position: center;
+	padding-bottom: 40px;
 }
