Сделал заголовок наших услуг

--- a/src/CarPages/Audi/Audi.module.css
+++ b/src/CarPages/Audi/Audi.module.css
@@ -99,3 +99,32 @@
 	background-color: #facd00;
 	transition: 0.5s;
 }
+
+.completedWork {
+	width: 1440px;
+	margin: auto;
+}
+.wrapperWorks {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.works {
+	color: #645d59;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	width: 330px;
+}
+.borderWork {
+	border-bottom: 1px solid gray;
+	opacity: 0.4;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+}
+
+.text {
+	color: #d9c9c1;
+	font-size: 20px;
+}
