--- a/src/CarPages/Audi/Audi.module.css
+++ b/src/CarPages/Audi/Audi.module.css
@@ -128,3 +128,20 @@
 	color: #d9c9c1;
 	font-size: 20px;
 }
+
+.carousel {
+	margin-bottom: 20px;
+}
+
+.wrapperCarousel {
+	width: 900px;
+	margin: auto;
+	border-radius: 40px;
+}
+.imageCarousel {
+	background-image: url('https://optim.tildacdn.com/tild3965-3835-4466-b830-363366393337/-/format/webp/Rectangle_1743.png');
+	background-size: cover;
+	object-fit: cover;
+	background-position: center;
+	padding-bottom: 40px;
+}
